api_versioned_docs/version-12.1.2.1/avalonia/skia/helpers/imagesavinghelper.mdx
---
title: 'ImageSavingHelper'
hide_title: true
slug: '/avalonia/skia/helpers/imagesavinghelper'
uid: 'Avalonia.Skia.Helpers.ImageSavingHelper'
commentId: 'T:Avalonia.Skia.Helpers.ImageSavingHelper'
docset: 'avalonia-docs'
packageId: 'Avalonia.Skia'
assembly: 'Avalonia.Skia'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Skia.Helpers'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">ImageSavingHelper Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Skia.Helpers</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Skia</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Skia</code>
</div>
</div>

<div className="apiref-page__lead">

Helps with saving images to stream/file.

</div>

<div className="apiref-page__signature">

```csharp
public class ImageSavingHelper
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> ImageSavingHelper
</div>
</div>

## Methods

| Name | Description |
| --- | --- |
| [SaveImage (4 overloads)](#uid-4441c5824b) | Saves a Skia image to a stream in the specified format. |

<span id="uid-4441c5824b"></span>

### SaveImage overloads

<section className="apiref-page__member-entry">

<span id="uid-b71a169d4a"></span>

#### SaveImage Method

Saves a Skia image to a stream in the specified format.

```csharp
public void SaveImage(SkiaSharp.SKImage image, System.IO.Stream stream, Avalonia.Media.Imaging.BitmapEncoderOptions options)
```

##### Parameters

`image` SkiaSharp.SKImage

The image to save


`stream` System.IO.Stream

The output stream to save the image to.


`options` [Avalonia.Media.Imaging.BitmapEncoderOptions](xref:Avalonia.Media.Imaging.BitmapEncoderOptions)

The options specifying the format and settings to use.
Typical usages include [Avalonia.Media.Imaging.PngBitmapEncoderOptions](xref:Avalonia.Media.Imaging.PngBitmapEncoderOptions) and [Avalonia.Media.Imaging.JpegBitmapEncoderOptions](xref:Avalonia.Media.Imaging.JpegBitmapEncoderOptions).


</section>

<section className="apiref-page__member-entry">

<span id="uid-0c666060f2"></span>

#### SaveImage Method

```csharp
public void SaveImage(SkiaSharp.SKImage image, System.IO.Stream stream, Nullable<int> quality)
```

##### Parameters

`image` SkiaSharp.SKImage


`stream` System.IO.Stream


`quality` Nullable&lt;int&gt;


</section>

<section className="apiref-page__member-entry">

<span id="uid-eea29c3fc9"></span>

#### SaveImage Method

Saves a Skia image to a file in the specified format.

```csharp
public void SaveImage(SkiaSharp.SKImage image, string fileName, Avalonia.Media.Imaging.BitmapEncoderOptions options)
```

##### Parameters

`image` SkiaSharp.SKImage

The image to save


`fileName` string

The output file to save the image to.


`options` [Avalonia.Media.Imaging.BitmapEncoderOptions](xref:Avalonia.Media.Imaging.BitmapEncoderOptions)

The options specifying the format and settings to use.
Typical usages include [Avalonia.Media.Imaging.PngBitmapEncoderOptions](xref:Avalonia.Media.Imaging.PngBitmapEncoderOptions) and [Avalonia.Media.Imaging.JpegBitmapEncoderOptions](xref:Avalonia.Media.Imaging.JpegBitmapEncoderOptions).


</section>

<section className="apiref-page__member-entry">

<span id="uid-b7a67c4f5d"></span>

#### SaveImage Method

```csharp
public void SaveImage(SkiaSharp.SKImage image, string fileName, Nullable<int> quality)
```

##### Parameters

`image` SkiaSharp.SKImage


`fileName` string


`quality` Nullable&lt;int&gt;


</section>

</ApiRefPage>

